# spider-pokedex

./: .gitignore  ProjectSpec.md  README.md  package-lock.json  package.json  tailwind.config.js
api/: araneae_inaturalist_completo.csv  index.py  main.py  playground.ipynb  pyproject.toml  requirements.txt  spider_images_vector_db_pipeline.py
app/: globals.css  layout.tsx  page.tsx
app/identify/: page.tsx
app/pokedex/: page.tsx
app/pokedex/[id]/: page.tsx
components/: BottomNav.tsx  Header.tsx  ImageUploader.tsx  SpiderCard.tsx
