[project]
name = "spiderdex-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google-genai>=1.72.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
]
